# polygraphia

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs
src/classic/: affine.rs  caesar.rs  hill.rs  mod.rs  playfair.rs
src/ffi/: affine_ffi.rs  caesar_ffi.rs  hill_ffi.rs  mod.rs  playfair_ffi.rs  types.rs
src/traits/: cipher.rs  mod.rs
src/utils/: kdf.rs  math.rs  matrix.rs  mod.rs  mode.rs
